# prolaunch

./: README.md  idea.txt  index.html  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: common.rs  lib.rs  main.rs
src-tauri/src/langs/: dart.rs  go.rs  java.rs  mod.rs  node.rs  php.rs  python.rs  ruby.rs
src/components/: CreateProjectFlow.tsx  LogViewer.tsx  ProjectWorkspace.tsx  ScriptButton.tsx  TabBar.tsx  WelcomeScreen.tsx
src/components/templates/: dart.ts  go.ts  icons.ts  index.ts  java.ts  node.ts  php.ts  python.ts  ruby.ts  types.ts
