[package]
name = "ProLaunch"
version = "0.1.0"
description = "prolaunch - Desktop app for managing dev scripts"
authors = ["you"]
edition = "2021"

[lib]
name = "project_1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
